# xtrx_julia

./: .gitignore  .gitmodules  JuliaManifest.toml  JuliaProject.toml  LICENSE  LitexManifest  README.md  fairwaves_xtrx.py  fairwaves_xtrx_gpu_dma_debug.py  fairwaves_xtrx_lms7002m_debug.py  fairwaves_xtrx_platform.py  lms7002m.py  tcxo.py  test_lms7002m_calib.py  test_lms7002m_spi.py  test_tcxo.py  test_tx_clk_delay.py  xtrxinit.vhd  xtrxinitrom.vhd
.buildkite/: 0_webui.yml  gateware.yml  gateware.yml.signature  pipeline.yml
.buildkite/cryptic_repo_keys/: repo_key.1a9c3d86
bringup-tests/gpu-dma/: fairwaves_xtrx_gpu_dma_debug.py
bringup-tests/gpu-dma/dumps/: dump_cpu1.vcd  dump_gpu2.vcd
bringup-tests/pmics/: digilent_arty.py  notes  xtrxinit.vhd
doc/: xc7a50tcpg236pkg.txt
doc/xtrx/: xtrx_boot_powerup.txt
doc/xtrx/soapy_capture_dumps/: README.md  reset.ini  rx_sample_rate.ini  rx_stream_deactivated.ini  rx_stream_read.ini
dumps/: dump_cpu2.vcd  dump_gpu1.vcd
firmware/: .gitignore  Makefile  i2c0.c  i2c0.h  i2c1.c  i2c1.h  isr.c  main.c  vctcxo_test.ex
gateware/: aux.py  gpio.py  gps.py  lms7002m.py  rf_switches.py  synchro.py  vctcxo.py  vctxo.py
software/: Makefile  Makefile.fairwaves  Makefile.kernel  Makefile.limesuite  Makefile.litepcie  Makefile.lms7002m  Makefile.nvidia  Makefile.rxtools  Makefile.soapysdr  __init__.py  linux-v5.16.config  xtrx.ini
software/LibSigGUI.jl/: Manifest.toml  Project.toml
software/LibSigGUI.jl/src/: LibSigGUI.jl
software/LibSigGUI.jl/test/: runtests.jl
software/LibSigflow.jl/: Manifest.toml  Project.toml
software/LibSigflow.jl/src/: LibSigflow.jl  sized_channel.jl
software/LibSigflow.jl/test/: runtests.jl
software/XTRX.jl/: Manifest.toml  Project.toml
software/XTRX.jl/src/: CSRs.jl  LMS7002Mdriver.jl  LMS7002Mdriver_gen.jl  TestHarness.jl  XTRX.jl  utils.jl
software/XTRX.jl/test/: runtests.jl
software/XTRX.jl/test/loopback_tests/: cis_freq_loopback.jl  vco_tuning.jl
software/app/: .gitignore  Makefile  litex_xtrx_util.c  test_gps.c  test_lms7002m_spi.c
software/configs/: Test_RXNCO.ini  xtrx.ini  xtrx_dlb.ini  xtrx_limesdr.ini  xtrx_raw_regs.txt  xtrx_rf.ini
software/experiments/phase_walking/: .gitignore  design.md  experiment_analyze.jl  experiment_capture.jl
software/kernel/: .gitignore  99-litepci.rules  Makefile  init.sh  install.sh  main.c  mem.h
software/litepcie-kernel-module/: .gitignore  Makefile  config.h  csr.h  init.sh  liteuart.c  main.c  mem.h  soc.h
software/litepcie-user-library/: Makefile  litepcie_test.c  litepcie_util.c
software/litepcie-user-library/liblitepcie/: litepcie_dma.c  litepcie_dma.h  litepcie_helpers.c  litepcie_helpers.h
software/scripts/: Manifest.toml  Project.toml  acquire_iq.jl  calibrate_delays.jl  checkIQimbalance.jl  check_continuous_oscillation.jl  clock_cal.jl  gps_dump.jl  highlevel_loopback.jl  julia_preferences_setup.jl  libsigflow.jl  libsigflow_tests.jl  multi_prog.sh  plot_iq_file.jl  record_data.jl  stream_and_plot.jl  temporal_gain_and_phase_mism.jl  test_chansounding.jl  test_lfsr.jl  test_loopback.jl  test_pattern.jl  test_pattern_gpu.jl  test_pattern_highlevel.jl  test_pattern_multithreaded.jl  test_settings.jl  toggle_led.jl  xtrx_debugging.jl
software/scripts/limesdr_tests/: .gitignore  README.md  c_example.jl  c_rx_example.jl  julia_chirp_loopback_mimo.jl  julia_example.jl  julia_psd.jl  julia_rx_example.jl  soapy_limesdr_example.c
software/soapysdr/: CMakeLists.txt  Streaming.cpp  XTRXDevice.cpp  XTRXDevice.hpp  test_loopback.jl
software/soapysdr-xtrx/: CMakeLists.txt  Registration.cpp  Streaming.cpp  XTRXDevice.cpp  XTRXDevice.hpp  i2c0.cpp  i2c1.cpp  litepcie_interface.h  main.c
software/user/: .gitignore  Makefile  litepcie_dma_minimal_example.c  litepcie_test.c
software/user/liblitepcie/: litepcie_dma.h  litepcie_helpers.h
test/: device_presence.jl  reset.sh  runtests.jl  test_dma.sh  test_glscopeclient.py  test_lms7002m_digital_interface.py  test_prbs.py
test/scopehal/: EnjoyDigitalGenericOscilloscope.cpp  EnjoyDigitalGenericOscilloscope.h
